<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ascendcorparation.what_if.instruction"
    android:orientation="vertical"
    android:background="#0D4F0F"
    android:id="@+id/ll1"
    android:weightSum="1"
    android:lineSpacingMultiplier="0.8"
    android:textSize="15sp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/INSTRUCTION"
        android:id="@+id/tv1"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:background="@drawable/buttonshape1"
        android:textAlignment="center"
        android:textStyle="bold"
        android:gravity="top|bottom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ins1"
        android:id="@+id/tv2"
        android:textColor="#FFFFFF"
        android:layout_marginTop="11dp"
        android:layout_weight="0.14"
        android:paddingTop="4dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="226dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ins2"
        android:id="@+id/tv3"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/tv4"
        android:text="@string/ins3"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@drawable/buttonshape1"
        android:gravity="top"
        android:paddingTop="12dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ins4"
        android:id="@+id/tv5"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:gravity="top|bottom"
        android:paddingTop="4dp"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />

</LinearLayout>
